# pmpl

./: .coverage  .readthedocs.yml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: docs.yml  release.yml
examples/: test_pmpl.ipynb
src/: __init__.py
