[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmpl"
version = "0.1.0"
description = "Plotting templates for matplotlib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "python-semantic-release>=10.5.2",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_message = "chore: release v{version}"
commit_parser = "conventional"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
