[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmpl"
version = "0.0.0"
description = "Plotting templates for matplotlib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmpl"]

[project.optional-dependencies]
test = [
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=1.26.0",
    "pre-commit>=4.5.0",
    "python-semantic-release>=10.5.2",
    "ruff>=0.14.9",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_message = "chore: release v{version}"
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pmpl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
